# niri-ipc

./: Cargo.toml  README.md  justfile
resources/: piri.service
src/: main.rs
