[package]
name = "piri"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
authors = ["Matilde Morrone <contact@morrone.dev>"]
readme = "README.md"
repository = "https://github.com/morr0ne/piri"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.98"
niri-ipc = "25.5.1"
regex = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "std",
] }
